# network-tools

./: .gitignore  README.md  pyproject.toml
.github/: dependabot.yml
.github/workflows/: linting.yml
docs/: console.md
network_tools/: __init__.py  __main__.py  constants.py  detector.py  example.py  telnet.py  types.py
network_tools/cli/: __init__.py  args.py  console.py  files.py  main.py
network_tools/cli/files/: csv.py  json.py
network_tools/clients/: __init__.py  telnet.py
network_tools/clients/telnet/: __init__.py  client.py  negotiate.py  types.py
network_tools/devices/: __init__.py  draytek.py
network_tools/input/: __init__.py
network_tools/tests/: __init__.py  connect.py  detector.py
tests/: test_blank.py  test_console.py  test_files.py  test_telnet.py
